--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,8 @@
 }
 
 body {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'JetBrains Mono', sans-serif;
+  /* font-family: 'IBM Plex Sans',"Segoe UI", Tahoma, Geneva, Verdana, sans-serif; */
   background: linear-gradient(135deg, #1a1a1a 0%, #2d2d2d 100%);
   color: #ffffff;
   padding: 20px;
